@@ -45,6 +45,9 @@ Core and builtins
 Library
 -------
 
+- Issue #2682: ctypes callback functions no longer contain a cyclic
+  reference to themselves.
+
 - Issue #2670:  Fix a failure in urllib2.build_opener(), when passed two
   handlers that derive the same default base class.
 
